--- a/christmas-task/src/app/components/header/header.scss
+++ b/christmas-task/src/app/components/header/header.scss
@@ -1,18 +1,13 @@
 .header {
-  // display: flex;
-  // justify-content: space-between;
-  // align-items: center;
-  // width: 100%;
-  // max-width: 1920px;
-  // height: 70px;
   background-color: #121c1e;
   padding: 0 2%;
-  // margin: auto;
+
   .wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 70px;
+    gap: 0 1rem;
   }
 }
