--- a/christmas-task/src/app/components/main/main-home/main-home.scss
+++ b/christmas-task/src/app/components/main/main-home/main-home.scss
@@ -50,5 +50,10 @@
     outline-color: rgba(255, 255, 255, 0.5);
     outline-offset: 0px;
     transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+
+    &:hover {
+      outline-color: rgba(255, 255, 255, 0);
+      outline-offset: 15px;
+    }
   }
 }
