refactor: rename some scss selectors

--- a/christmas-task/src/app/components/header/chosen-toys/chosen-toys.scss
+++ b/christmas-task/src/app/components/header/chosen-toys/chosen-toys.scss
@@ -6,7 +6,7 @@
   background-position: left -8px;
   background-repeat: no-repeat;
 
-  .count-toys {
+  &__count {
     display: inline-block;
     min-width: 40px;
     height: 40px;
