--- a/christmas-task/src/app/components/type-filters/base-filters/size.scss
+++ b/christmas-task/src/app/components/type-filters/base-filters/size.scss
@@ -38,7 +38,7 @@
     background-size: 32px 32px;
   }
 
-  .active_size {
+  .active__size {
     filter: invert(9%) sepia(63%) saturate(461%) hue-rotate(322deg) brightness(83%) contrast(88%);
   }
 }
