--- a/christmas-task/src/app/components/header/search/search.scss
+++ b/christmas-task/src/app/components/header/search/search.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
 
-  .search__input {
+  &__input {
     width: 380px;
     height: 40px;
     padding: 5px 20px 5px 35px;
