--- a/christmas-task/src/app/components/home/home.scss
+++ b/christmas-task/src/app/components/home/home.scss
@@ -1,5 +1,5 @@
 .main-home {
-  background-image: url("../../../../assets/bg.jpg");
+  background-image: url("../../../assets/bg.jpg");
   min-width: 100%;
   min-height: calc(100vh - 140px);
   background-size: cover;
