refactor: rename and separate method in base-range.ts

--- a/christmas-task/src/app/components/range-filters/base-range/base-range.scss
+++ b/christmas-task/src/app/components/range-filters/base-range/base-range.scss
@@ -1,3 +1,5 @@
+// I use .noUi-handle and .noUi-horizontal selectors because these classes are going from the imported library noUiSlider
+
 .count {
   
   .count__container {
