--- a/christmas-task/src/app/components/sorts/select/select.scss
+++ b/christmas-task/src/app/components/sorts/select/select.scss
@@ -62,7 +62,7 @@
   cursor: pointer;
 }
 
-.select__custom.isActive .custom__options {
+.select__custom.active .custom__options {
   display: block;
 }
 
