--- a/christmas-task/src/app/components/toys/toys.scss
+++ b/christmas-task/src/app/components/toys/toys.scss
@@ -1,7 +1,7 @@
 .main-toys {
   min-width: 100%;
   min-height: calc(100vh - 140px);
-  background-image: url("../../../assets/bg/1.jpg");
+  background-image: url("../../../assets/bg.jpg");
   background-size: cover;
   background-attachment: fixed;
 
