feat: add trees-menu and map-tree

--- a/christmas-task/src/app/components/snow/snow.scss
+++ b/christmas-task/src/app/components/snow/snow.scss
@@ -19,7 +19,8 @@
 }
 
 .snow-field {
-  height: calc(100vh - 50px);
+  // height: calc(100vh - 50px);
+  height: 100%;
   width: 100%;
   position: absolute;
   top: 0;
