--- a/christmas-task/src/app/components/christmas-tree/christmas-tree.scss
+++ b/christmas-task/src/app/components/christmas-tree/christmas-tree.scss
@@ -6,8 +6,8 @@
   background-image: url('../../../assets/bg/1.jpg');
   background-size: cover;
   background-position: center;
-  height: calc(100vh - 140px);
-  min-height: 750px;
+  // height: calc(100vh - 140px);
+  // min-height: 650px;
   padding-bottom: 20px;
   overflow: hidden;
   position: relative;
