--- a/christmas-task/src/app/components/toys-list/toys-list.scss
+++ b/christmas-task/src/app/components/toys-list/toys-list.scss
@@ -1,7 +1,7 @@
 .toys-list {
   flex: 0 0 20%;
-  height: calc(100vh - 140px);
-  min-height: 750px;
+  // height: calc(100vh - 140px);
+  // min-height: 750px;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
