--- a/christmas-task/src/app/components/tree/tree.scss
+++ b/christmas-task/src/app/components/tree/tree.scss
@@ -9,7 +9,7 @@
     background: rgba(22, 41, 41, 0.5);
     backdrop-filter: blur(3px);
     height: 100%;
-    min-height: calc(100vh - 140px);
+    // min-height: calc(100vh - 140px);
     width: 100%;
 
     
@@ -18,7 +18,6 @@
     height: 100%;
     min-height: calc(100vh - 140px);
     width: 100%;
-    padding: 1% 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
