--- a/christmas-task/src/app/components/snow/snow.scss
+++ b/christmas-task/src/app/components/snow/snow.scss
@@ -19,7 +19,6 @@
 }
 
 .snow-field {
-  // height: calc(100vh - 50px);
   height: 100%;
   width: 100%;
   position: absolute;
@@ -30,7 +29,7 @@
   overflow: hidden;
 }
 
-.snowflake {
+.snowflake__icon {
   width: 10px;
   height: 10px;
   background-image: url("../../../assets/svg/snow.svg");
