--- a/christmas-task/src/app/components/toys-list/toys-list.scss
+++ b/christmas-task/src/app/components/toys-list/toys-list.scss
@@ -1,14 +1,31 @@
 .toys-list {
-  flex: 0 0 20%;
-  // height: calc(100vh - 140px);
-  // min-height: 750px;
+  flex: 0 0 26%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: flex-start;
+  align-self: start;
   align-content: flex-start;
   gap: 10px;
   width: 100%;
-  padding-top: 25px;
-  padding-left: 25px;
+
+  &__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    gap: 10px;
+    width: 100%;
+    padding-top: 20px;
+  }
+
+  &__title {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 400;
+    padding-bottom: 10px;
+    padding-left: 0;
+    text-transform: uppercase;
+  }
 }
