--- a/christmas-task/src/app/components/settings/settings.scss
+++ b/christmas-task/src/app/components/settings/settings.scss
@@ -17,3 +17,10 @@
     align-content: flex-start;
   }
 }
+
+@media (min-width: 768px) and (max-width: 1040px) {
+  .settings {
+    order: 3;
+    flex: 1 0 26%;
+  }
+}
