--- a/christmas-task/src/app/components/toys-list/toys-list.scss
+++ b/christmas-task/src/app/components/toys-list/toys-list.scss
@@ -29,3 +29,9 @@
     text-transform: uppercase;
   }
 }
+
+@media (min-width: 768px) and (max-width: 1040px) {
+  .toys-list {
+    order: 1;
+  }
+}
