feat: add cars class

--- a/async-race/src/app/components/form/form.scss
+++ b/async-race/src/app/components/form/form.scss
@@ -34,12 +34,12 @@
   }
 
   .input-submit {
+    width: 82px;
     color: black;
     background-color:rgb(0, 206, 209);
     font: 1rem cursive;
     border: none;
     border-radius: 5px;
-    padding: 0 15px;
     transition: 0.5s;
     cursor: pointer;
     outline: 0;
