--- a/async-race/src/app/components/garage/garage.scss
+++ b/async-race/src/app/components/garage/garage.scss
@@ -1,9 +1,9 @@
 .garage {
   display: flex;
   flex-direction: column;
-  width: 425px;
   position: absolute;
   transition: 0.5s;
+  width: 100%;
 
   .controls {
     display: flex;
@@ -33,31 +33,61 @@
 
   .race {
     background-color: rgb(0, 209, 112);
-    flex: 1 0 75px;
+    flex: 0 0 100px;
 
 
     &:hover {
-      box-shadow: 0px 0px 8px 6px rgba(0, 209, 112, 0.4);
+      box-shadow: 0px 0px 8px 6px rgba(0, 209, 112, 0.8);
     }
   }
 
   .reset {
-    background-color: rgb(175, 46, 46);
-    flex: 1 0 75px;
+    background-color: rgb(206, 30, 30);
+    flex: 0 0 100px;
 
 
     &:hover {
-      box-shadow: 0px 0px 8px 6px rgba(175, 46, 46, 0.4);
+      box-shadow: 0px 0px 8px 3px rgba(206, 30, 30, 0.4);
     }
   }
 
   .generate-cars {
     background-color: rgb(0, 206, 209);
-    flex: 1 0 150px;
+    flex: 0 0 195px;
 
 
     &:hover {
       box-shadow: 0px 0px 8px 6px rgba(0, 206, 209, 0.4);
+    }
+  }
+  .garage-manege {
+    display: flex;
+    gap: 0 1rem;
+    padding: 0.5rem 0;
+
+    .prev,
+    .next {
+      color: black;
+      font: 1rem cursive;
+      border: none;
+      border-radius: 5px;
+      padding: 0 15px;
+      transition: 0.5s;
+      cursor: pointer;
+      height: 25px;
+      border-radius: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: wheat;
+      
+      &:active {
+        transform: scale(0.95);
+      }
+
+      &:hover {
+        box-shadow: 0px 0px 8px 6px rgba(187, 178, 50, 0.4);
+      }
     }
   }
 }
