--- a/async-race/src/style.scss
+++ b/async-race/src/style.scss
@@ -6,7 +6,7 @@
 
 body {
   padding: 1rem;
-  background-color: rgb(65, 58, 58);
+  background-color: rgb(148, 140, 140);
 }
 
 .input {
@@ -22,7 +22,7 @@ button {
   position: relative;
 }
 
-.visible {
+.invisible {
   opacity: 0;
   z-index: -1;
 }
