feat: add winner page

--- a/async-race/src/app/components/popup/popup.scss
+++ b/async-race/src/app/components/popup/popup.scss
@@ -18,6 +18,9 @@
     height: 60px;
     line-height: 60px;
     text-transform: uppercase;
+    text-align: center;
+    font: 2rem cursive;
+    text-shadow: #FC0 1px 0 10px;
   }
 }
 
